Dark mode fixes

--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -31,10 +31,9 @@
     color: var(--text-color);
     font-size: 14px;
     position: relative;
-    border-bottom: 1px solid red;
 
     [data-striped] &:nth-child(odd) {
-      background-color: var(--gray-100);
+      background-color: var(--background-color);
     }
 
     &[data-focus-visible] {
@@ -43,7 +42,7 @@
     }
 
     &[data-pressed] {
-      background: var(--gray-100);
+      background: var(--background-color-hover);
     }
 
     &[data-selected] {
