--- a/src/theme.css
+++ b/src/theme.css
@@ -63,6 +63,8 @@
   --field-background: transparent;
   --field-text-color: var(--gray-900);
   --overlay-background: var(--gray-200);
+  --background-color: var(--gray-100);
+  --background-color-hover: var(--gray-200);
 
   --primary-color: var(--gray-50);
   --primary-background: var(--indigo-500);
@@ -103,13 +105,15 @@
   --link-color: var(--indigo-500);
   --link-color-secondary: var(--gray-500);
   --link-color-pressed: var(--indigo-400);
-  --border-color: var(--gray-700);
-  --border-color-hover: var(--gray-600);
+  --border-color: var(--gray-800);
+  --border-color-hover: var(--gray-700);
   --border-color-pressed: var(--gray-600);
   --border-color-disabled: var(--gray-800);
   --field-background: var(--gray-900);
   --field-text-color: var(--gray-50);
   --overlay-background: var(--gray-800);
+  --background-color: var(--gray-900);
+  --background-color-hover: var(--gray-800);
 
   --secondary-color: var(--gray-100);
   --secondary-background: var(--gray-900);
